--- a/.env
+++ b/.env
@@ -1,12 +1,17 @@
 PORT=8000
 
+
+
+
 dialect=mysql
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=server311.web-hosting.com:2083
 DB_PORT=3306
-DB_DATABASE=nodeapi
-DB_USERNAME=kenny
-DB_PASSWORD=password
+DB_DATABASE=hotfpctd_nodeApi
+DB_USERNAME=hotfpctd_nodeApi
+DB_PASSWORD=nodeApiPassword@1234
+
+
 
 POOL_MAX= 5
 POOL_MIN= 0,
@@ -17,5 +22,3 @@ OPERATOR_ALIASES=1
 
 SECRET=f2dd03151bf9a3df5e0a465c87db5a4cc4861009382e393031
 
-
-  
