--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ PORT=8000
 
 dialect=mysql
 DB_CONNECTION=mysql
-DB_HOST=server311.web-hosting.com:2083
-DB_PORT=3306
+DB_HOST=server311.web-hosting.com
+DB_PORT=2083
 DB_DATABASE=hotfpctd_nodeApi
 DB_USERNAME=hotfpctd_nodeApi
 DB_PASSWORD=nodeApiPassword@1234
