--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=8000
 
 dialect=mysql
 DB_CONNECTION=mysql
-DB_HOST=https://server311.web-hosting.com
+DB_HOST=server311.web-hosting.com
 DB_PORT=2083
 DB_DATABASE=hotfpctd_nodeApi
 DB_USERNAME=hotfpctd_nodeApi
