--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 PORT=8000
 
-
-
-
 dialect=mysql
 DB_CONNECTION=mysql
-DB_HOST=server311.web-hosting.com
-DB_PORT=2083
-DB_DATABASE=hotfpctd_nodeApi
-DB_USERNAME=hotfpctd_nodeApi
-DB_PASSWORD=nodeApiPassword@1234
-
-
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=nodeapi
+DB_USERNAME=root
+DB_PASSWORD=k
+# DB_HOST=server311.web-hosting.com
+# DB_PORT=2083
+# DB_DATABASE=hotfpctd_nodeApi
+# DB_USERNAME=hotfpctd_nodeApi
+# DB_PASSWORD=nodeApiPassword@1234
 
 POOL_MAX= 5
 POOL_MIN= 0,
@@ -21,4 +21,16 @@ POOL_IDLE= 10000
 OPERATOR_ALIASES=1
 
 SECRET=f2dd03151bf9a3df5e0a465c87db5a4cc4861009382e393031
+
+
+MAIL_DRIVER=smtp
+MAIL_HOST=bloomer.spearhead.com.ng
+MAIL_PORT=465
+MAIL_USERNAME=info@bloomer.spearhead.com.ng
+MAIL_PASSWORD="Password@101"
+MAIL_ENCRYPTION=ssl
+MAIL_REPLY_TO="info@bloomer.spearhead.com.ng"
+MAIL_FROM_ADDRESS="info@bloomer.com"
+MAIL_FROM_NAME='Bloomer_Team'
+
 
