--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "custom-id": "^1.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi-age": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.7.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.1.3"
   }
 }
