--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8000
-
+APP_NAME=Bloomer
 dialect=mysql
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -32,5 +32,6 @@ MAIL_ENCRYPTION=ssl
 MAIL_REPLY_TO="info@bloomer.spearhead.com.ng"
 MAIL_FROM_ADDRESS="info@bloomer.com"
 MAIL_FROM_NAME='Bloomer_Team'
+
 
 
