--- a/.env
+++ b/.env
@@ -24,11 +24,17 @@ SECRET=f2dd03151bf9a3df5e0a465c87db5a4cc4861009382e393031
 
 
 MAIL_DRIVER=smtp
-MAIL_HOST=bloomer.spearhead.com.ng
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=info@bloomer.spearhead.com.ng
-MAIL_PASSWORD="Password@101"
+MAIL_USERNAME=kennygendowed@gmail.com
+MAIL_PASSWORD=Rooneywwe@wwe11
 MAIL_ENCRYPTION=ssl
+# MAIL_DRIVER=smtp
+# MAIL_HOST=bloomer.spearhead.com.ng
+# MAIL_PORT=465
+# MAIL_USERNAME=info@bloomer.spearhead.com.ng
+# MAIL_PASSWORD="Password@101"
+# MAIL_ENCRYPTION=ssl
 MAIL_REPLY_TO="info@bloomer.spearhead.com.ng"
 MAIL_FROM_ADDRESS="info@bloomer.com"
 MAIL_FROM_NAME='Bloomer_Team'
