--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=8000
 APP_NAME=Bloomer
 APP_URL=http://127.0.0.1:8000/api
+APP_ASSETS_URL=http://127.0.0.1:8000/
 dialect=mysql
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
