--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "custom-id": "^1.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "joi-age": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
